# kdt-autodrive4-team3-week8

./: README.md
controller/: ControlState.h  team3-controller.cpp
include/team3-controller/: ControlDriver.h  ControlState.h  SensorState.h
launch/: go-straight.launch  physics.launch  sensor_cam.launch  sensor_lidar.launch  team3-controller.launch  tem3-controller.launch  test-physics.launch
msg/: lidar_msg.msg
pkg/: CMakeLists.txt  package.xml
sensor-cam-hough/: CMakeLists.txt  cam_msg.msg  sensor_cam_hough.cpp
sensor-cam-hough/pkg/: package.xml
sensor-cam/msg/: cam_msg.msg
sensor-cam/src/: sensor_cam.cpp
sensor-lidar/: CMakeLists.txt  sensor_lidar.launch
src/: go-straight.cpp  sensor_cam.cpp  sensor_cam_hough.cpp  sensor_lidar.cpp  team3-controller.cpp  test-go-straight.cpp  test-speed.cpp  test-turning.cpp  turning.cpp
